# django-business-logic

./: .codeclimate.yml  .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .landscape.yml  .readthedocs.yaml  .travis.yml  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  Procfile  README.md  README.pip.footer.rst  README.rst  app.json  coverage.xml  docker-compose.yml  makemigration.sh  manage.py  noxfile.py  requirements.dev.txt  requirements.heroku.txt  requirements.test.txt  requirements.txt  resetdb.sh  setup.cfg  setup.py  tests.sh  tox.ini  unittests.xml
business_logic/: __init__.py  admin.py  apps.py  blockly.py  config.py  exceptions.py  fields.py  requirements.txt  signals.py  urls.py  utils.py  validators.py
demo/: settings.py  tests.sh
demo/demo/: settings.py  (+1 more)
docs/: caveats.rst  conf.py  configuration.rst  credits.rst  demo.rst  development.rst  index.rst  installation.rst  license.rst  requirements.in  requirements.rst  requirements.txt  roadmap.rst  screenshots.rst  visual-programming.rst  watch.sh
frontend/: .gitignore  Dockerfile  README.md  index.html  npm-shrinkwrap.json  package.json  semantic.json  tsconfig.json  typings.json  webpack.config.js
sites/: settings.py
tests/: common.py  constant.py  function.py  ifstatement.py  log.py  test_assignment.py  test_constant.py  test_context.py  test_debug.py  test_frame.py  test_function.py  test_ifstatement.py  test_log.py  test_node.py  test_operator.py  test_program.py  test_reference.py  test_signals.py  test_stop.py  test_types.py  test_variable.py  types_.py  utils.py
(+302 files in other folders)
