[metadata]
description-file = README.md
[wheel]
universal = 1
[bdist_wheel]
universal = 1
[pycodestyle]
max-line-length = 120
[flake8]
exclude = business_logic/migrations,frontend,.tox,virtualenv,venv,build,dist
max-line-length = 120
max_complexity = 10
ignore =
    # star imports will be fixed after api stabilization
    F403, F405

