[metadata]
description-file = README.md
[wheel]
universal = 1
[bdist_wheel]
universal = 1
[pycodestyle]
max-line-length = 120
[flake8]
exclude = business_logic/migrations,frontend,.tox,virtualenv,venv,build,dist
max-line-length = 120
max_complexity = 10
# some issues will be fixed later
ignore =
    # module imported but unused
    F401,
    # ‘from module import *’ used; unable to detect undefined names
    F403,
    # name may be undefined, or defined from star imports: module
    F405,
    # local variable name is assigned to but never used
    F841,
